--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a href="#" class="navbar-brand glyphicon glyphicon-phone" style="font-size: 35px; color: white;" ></a>
+            <a href="#" class="navbar-brand glyphicon glyphicon-phone" style="font-size: 35px; color: white; margin-left: 6px;" ></a>
 
         </div>
 
@@ -41,10 +41,15 @@
           <li><a href="#">Contacts</a></li>
         </ul>    
 
-<ul class="nav navbar-nav pull-right lang">
-          <li><a href="#"><img src="ru.svg" alt="">RU</a></li>
+<ul class="nav navbar-nav navbar-right lang">
+          <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" role="button" href="#"><img src="ru.svg" alt="">Russian <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href=""><img src="us.svg" alt="">English</a></li>
+        </ul>
 
-          <li><a href="#" class="language" rel="en-US"><img src="us.svg" alt="">EN</a></li>
+          </li>
+
+          <!-- <li><a href="#" class="language" rel="en-US"><img src="us.svg" alt="">EN</a></li> -->
         </ul>     
           <form class="navbar-form pull-right" role="search">
             <div class="form-group">
